--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -93,9 +93,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
     "import this"
    ]
@@ -123,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -915,15 +943,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#1: dog\n",
-      "#2: fish\n",
+      "#1: fish\n",
+      "#2: dog\n",
       "#3: cat\n"
      ]
     }
@@ -944,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1415,15 +1443,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.06930294 0.49145071]\n",
-      " [0.13574879 0.92910307]]\n"
+      "[[0.57584699 0.0757792 ]\n",
+      " [0.18793454 0.78004389]]\n"
      ]
     }
    ],
@@ -1455,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1631,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1917,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1969,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2015,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2046,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2099,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2137,7 +2165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2174,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2198,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2226,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2272,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2298,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2321,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2367,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2431,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2447,7 +2475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2470,16 +2498,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11d963190>]"
+       "[<matplotlib.lines.Line2D at 0x1142b94d0>]"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2514,16 +2542,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11d9bfed0>"
+       "<matplotlib.legend.Legend at 0x114390a50>"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2569,7 +2597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
