--- a/performance/performance.ipynb
+++ b/performance/performance.ipynb
@@ -160,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "91.4 ms ± 6.65 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "86.6 ms ± 1.52 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -357,8 +357,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 23.69 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "549 µs ± 1.02 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "The slowest run took 21.46 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "495 µs ± 900 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -450,7 +450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20.6 ms ± 187 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "21.4 ms ± 1.36 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -505,7 +505,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "174 ms ± 1.79 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "176 ms ± 4.65 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -554,7 +554,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "173 ms ± 2.29 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "173 ms ± 4 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -604,7 +604,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "552 µs ± 3.85 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "541 µs ± 5.14 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -662,7 +662,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "234 µs ± 5.22 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "226 µs ± 2.84 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -698,12 +698,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "155 µs ± 7.06 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "151 µs ± 4.01 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit -n100 X.dot(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.02 µs ± 1.54 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit -n100 X*Y"
    ]
   },
   {
