--- a/multithreading/multithreading.ipynb
+++ b/multithreading/multithreading.ipynb
@@ -1184,6 +1184,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## `numba` JIT compiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "from numba import jit, prange\n",
+    "\n",
+    "@jit(nopython=True, parallel=True, fastmath=True, cache=True)\n",
+    "def integrate(a, b, *, n_iter=1000):\n",
+    "    acc = 0\n",
+    "    step = (b - a) / n_iter\n",
+    "    for i in prange(n_iter):\n",
+    "        acc += math.cos(a + i * step) * step\n",
+    "    return acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.11 ms ± 983 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -n100\n",
+    "integrate(0, math.pi / 2, n_iter=10**6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Profit."
    ]
   }
